2011-01-03 Kazuhiko
* split fulltext related part from erp5_mysql_innodb_catalog.