@@ -1,0 +1,2 @@
+<catalog_method>
+</catalog_method>
